// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OuiPage direction can be row 1`] = `
<div
  class="ouiPage ouiPage--paddingMedium ouiPage--grow"
/>
`;

exports[`OuiPage grow can be false 1`] = `
<div
  class="ouiPage ouiPage--paddingMedium"
/>
`;

exports[`OuiPage is rendered 1`] = `
<div
  aria-label="aria-label"
  class="ouiPage ouiPage--paddingMedium ouiPage--grow testClass1 testClass2"
  data-test-subj="test subject string"
/>
`;

exports[`OuiPage paddingSize l is rendered 1`] = `
<div
  class="ouiPage ouiPage--paddingLarge ouiPage--grow"
/>
`;

exports[`OuiPage paddingSize m is rendered 1`] = `
<div
  class="ouiPage ouiPage--paddingMedium ouiPage--grow"
/>
`;

exports[`OuiPage paddingSize none is rendered 1`] = `
<div
  class="ouiPage ouiPage--grow"
/>
`;

exports[`OuiPage paddingSize s is rendered 1`] = `
<div
  class="ouiPage ouiPage--paddingSmall ouiPage--grow"
/>
`;

exports[`OuiPage restrict width can be set to a custom number 1`] = `
<div
  class="ouiPage ouiPage--paddingMedium ouiPage--grow ouiPage--restrictWidth-custom"
  style="max-width:1024px"
/>
`;

exports[`OuiPage restrict width can be set to a custom value and does not override custom style 1`] = `
<div
  class="ouiPage ouiPage--paddingMedium ouiPage--grow ouiPage--restrictWidth-custom"
  style="color:red;max-width:24rem"
/>
`;

exports[`OuiPage restrict width can be set to a default 1`] = `
<div
  class="ouiPage ouiPage--paddingMedium ouiPage--grow ouiPage--restrictWidth-default"
/>
`;
